SFUSA/force-app/main/default/objects/GBS_Document_Link__kav/fields/File__c.field-meta.xml
<CustomField>
        <fullName>File__c</fullName>
        <label>File</label>
        <type>File</type>
    </CustomField>