SFUSA/force-app/main/default/objects/GBS_Document_Link__kav/fields/Summary__c.field-meta.xml
<CustomField>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>